Fix text wrapping in profile side bar

--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -2,8 +2,9 @@
     display: flex;
     font-family: 'CabinetGrotesk-Bold';
     max-width: 1400px;
-    padding: 0 20px;
+    padding-left: 20px;
     gap: 40px;
+    margin-top: 40px;
 }
 
 .profile__side-bar {
@@ -19,6 +20,8 @@
 
 .profile__name {
     font-size: 20px;
+    white-space: nowrap;
+    margin-top: 15px;
 }
 
 .profile__main {
@@ -28,6 +31,7 @@
 .profile__header {
     display: flex;
     gap: 20px;
+    margin-left: 50px;
 }
 
 .profile__items-heading {
